--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
-
+		
+		<% if Rails.env.production? %>
+		<!-- ====Google Analytics==== -->
 		<script type="text/javascript">
 
 		  var _gaq = _gaq || [];
@@ -29,5 +31,6 @@
 		  })();
 
 		</script>
+		<% end %>
   </body>
 </html>
