--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,11 +25,12 @@
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_user_path(user), :class => 'btn btn-mini' %>
+					
           <%= link_to t('.destroy', :default => t("helpers.links.delete")),
                       user_path(user),
                       :method => :delete,
                       :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-mini btn-danger' unless user.admin? %>
         </td>
 				<% end %>
       </tr>
