--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
 <section class="well">
   <h3>About <small>(<%= @user.username %>)</small>:</h3>
-	<%= markdown "Email: #{@user.email}" if can? :update, @user %>
+	<%= markdown "Email: #{@user.email}" if can? :update, :users %>
   <%= markdown @user.about %>
 </section>
 
@@ -16,7 +16,7 @@
 </p>
 <% end %>
 
-<% if can? :update, @user %>
+<% if can? :update, :users %>
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               users_path, :class => 'btn'  %>
@@ -26,6 +26,6 @@
               user_path(@user),
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-              :class => 'btn btn-danger' %>
+              :class => 'btn btn-danger' unless @user.admin? %>
 </div>
 <% end %>
