--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -5,25 +5,22 @@
 	<strong>Tanzania</strong><br>
 	BLESS AFRICA Tours and Safaris <br>
 	PO Box 858, <br>
-	Moshi, Kilimanjaro, <br>
+	Moshi, Kilimanjaro. <br>
 	Tanzania <br><br>
 	<strong>Mobile:</strong> +255 717 061 502 <br>
-	<strong>Landline:</strong> +255 712 556 689 <br><br>
-	<strong>Email:</strong> <a href="mailto:&#x69;&#x6E;&#x66;&#x6F;&#x40;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x2E;&#x63;&#x6F;&#x6D;">info@blessafricatours.com</a> 
-	<a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x5F;&#x65;&#x6D;&#x69;&#x6C;&#x40;&#x79;&#x61;&#x68;&#x6F;&#x6F;&#x2E;&#x63;&#x6F;&#x6D;">godbless_emil@yahoo.com</a>
+	<strong>Email:</strong> <a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">godblessafricatours@gmail.com</a>
 </address>
 
 <address class="span4">
 	<strong>United Kingdom</strong><br>
 	BLESS AFRICA Tours and Safaris <br>
-	The Granary Church Farm,<br>
-	Station Road,South Willingham,<br>
-	LN8 6NJ Lincolnshire, <br>
+	Fairfield Enterprise Centre,<br>
+	Lincoln Way,<br>
+	Louth, LN10 0AW. <br>
 	United Kingdom <br><br>
-	<strong>Mobile:</strong> +44 0000 000 000 <br>
-	<strong>Landline:</strong> +44 0000 000 000 <br><br>
-	<strong>Email:</strong> <a href="mailto:&#x69;&#x6E;&#x66;&#x6F;&#x40;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x2E;&#x63;&#x6F;&#x6D;">info@blessafricatours.com</a> 
-	<a href="mailto:&#x67;&#x6F;&#x64;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x5F;&#x65;&#x6D;&#x69;&#x6C;&#x40;&#x79;&#x61;&#x68;&#x6F;&#x6F;&#x2E;&#x63;&#x6F;&#x6D;">jo@blessafricatours.com</a>
+	<strong>Mobile:</strong> +44 7974 258 491 <br>
+	<strong>Landline:</strong> +44 1507 617 777 <br><br>
+	<strong>Email:</strong> <a href="mailto:&#x6A;&#x6F;&#x62;&#x6C;&#x65;&#x73;&#x73;&#x61;&#x66;&#x72;&#x69;&#x63;&#x61;&#x74;&#x6F;&#x75;&#x72;&#x73;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;">joblessafricatours@gmail.com</a>
 </address>
 
 </sectiion>
