--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
 		<h1><%= link_to post.title, post_path(post), title: post.title %></h1>
 		<p>
 			<small>
-				<%= time_tag post.published, format: '%m %b %Y', pubdate: true if post.published? %> 
+				<%= time_tag post.published, pubdate: true if post.published? %> 
 				<b>By:</b> <%= link_to post.user.full_name, user_path(post.user), title: post.user.full_name %>
 			 	&bull; 
 				<i>(<%= post.comments.count %>) Comments</i>
