--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,8 @@
 					<%= link_to "About us", :about_us %> &bull; 
 					<%= link_to "About Tanzania", :about_tanzania %> &bull; 
 					<%= link_to "Important Information", :important_information %> &bull; 
-					<%= link_to "Contact us", :contact_us %>
+					<%= link_to "Contact us", :contact_us %>  &bull; 
+					<%= link_to "Terms and Privacy", :terms_and_conditions %>
 				</p>
 				<p>Designed and built with all the love in the world <a href="http://safarista.com" target="_blank" title="Safarista Design">@Safarista Design</a> by <a href="http://twitter.com/ilinkoln">@iLinkoln</a> and <a href="http://safarista.com" title="Safarista Design | Web, branding, graphic, logo design, seo and web hosting Lincoln UK ">@Safarista</a></p>
 			</footer>
