--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -14,7 +14,7 @@
 	<article class="span3">
 		<ul class="thumbnails">
 			<li class="thumbnail">
-					<%= image_tag  "http://placehold.it/260x220", alt: 'Godbless Swai', title: 'Godbless Swai' %> 
+					<%= image_tag  "godbless_swai.JPG", alt: 'Godbless Swai', title: 'Godbless Swai' %> 
 			</li>
 		</ul>
 		<h3>Godbless Emil Swai</h3>
