more fine tunning of the app at last

--- a/app/views/pages/kit_hire.html.erb
+++ b/app/views/pages/kit_hire.html.erb
@@ -1,5 +1,5 @@
 <section class="">
-	<h1>MOUNTAIN EQUIPMENT</h1>
+	<h2>Mountain trekking equipment</h2>
 	<br>
 	<table summary="Mountain climbing equipment prices and information. Prices shown are for hire and per each trip." class="table">
 	<caption>PRICES FOR HIRE: </caption>
