--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,7 +82,6 @@
 			<div class="alert alert-danger">
 				<h2 style="text-align:center;">Day Trips</h2>
 				<p><span class="visible-desktop">Taste some of </span>Tanzanian delights</p>
-				
 				<p><strong>From &dollar;100/day</strong> <br> Oct - Mar</p>
 				<p><%= link_to  "Book Now!", :day_trips, class: "btn btn-warning btn-large" %></p>
 			</div>
@@ -90,9 +89,9 @@
 	</div>
 	<div class="bs-links">
 		<ul class="quick-links">
-			<li class="btn"><%= link_to 'Facebook', 'http://www.facebook.com/pages/Bless-Africa-Tours/221432741271264', title: 'Bless-Africa-Tours  Facebook page', target: '_blank' %></li>
+			<li class="btn"><%= link_to 'Facebook', 'http://www.facebook.com/blessafrica.tours', title: 'Bless-Africa-Tours  Facebook page', target: '_blank' %></li>
 			<li class="btn"><%= link_to 'Twitter', 'https://twitter.com/blesstours', title: 'Bless Africa Tours and Safaris Twitter profile', target: '_blank' %></li>
-			<li class="btn"><%= link_to 'Google+' , "#", title: "Google plus page", target: '_blank' %></li>
+			<li class="btn"><%= link_to 'Google+' , "https://plus.google.com/u/112391175372507967021/posts", title: "Google plus page", target: '_blank' %></li>
 		</ul>
 	</div>
 </header>
