--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -3,15 +3,20 @@
 
 <ul class="thumbnails">
 	<% @albums.each do |album| %>
-		<% album.photos.find(:last) do |p| %>
-  			<li class="span3">
+		<% if album.photos.find(:first) do |p| %>
+  		<li class="span3">
 				<div class="thumbnail" >
 					<%= link_to image_tag(p.name_url(:thumb), alt: p.caption, width: '100%'), album_photos_path(album) %>
 					<hr>
 					<h5><%= link_to album.title, album_photos_path(album) %></h5>
 				</div>
 			</li>
-		<% end %>
+		<% else %>
+		<li class="span3">
+			<div class="thumbnail" >
+				<%= link_to image_tag('http://placehold.it/260x80', alt: 'Place holder', width: '100%'), '#' %>
+			</div>
+		</li>
 	<% end %>
 </ul>
 <hr>
