--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -81,7 +81,7 @@
 		<div class="span3">
 			<div class="alert alert-danger">
 				<h2 style="text-align:center;">Day Trips</h2>
-				<p><span class="visible-desktop">Taste some of </span>Tanzanian delights</p>
+				<p><span class="visible-desktop">Taste some </span>Tanzanian delights</p>
 				<p><strong>From &dollar;100/day</strong> <br> Oct - Mar</p>
 				<p><%= link_to  "Book Now!", :day_trips, class: "btn btn-warning btn-large" %></p>
 			</div>
@@ -101,7 +101,7 @@
 <div class="marketing">
 	<div class="row">
 		<div class="span6">
-			<h2><%= link_to 'About us', '/about_us', title: 'About Us' %></h2>
+			<h2><%= link_to 'About us', '/about-us', title: 'About Us' %></h2>
 			<p>Bless Africa Tours  and safaris is a locally owned Travel company based in Moshi. With over 6 years experience in the Trek and Travel industry and extensive local knowledge and links the company strives to add something extra to a visit to Tanzania.</p>
 		</div>
 		<div class="span6">
@@ -111,11 +111,11 @@
 	</div>
 	<div class="row">
 		<div class="span6">
-			<h2><%= link_to 'Kit Hire', '/kit_hire', title: 'Hire Safaris and mountain Trekking kits' %></h2>
+			<h2><%= link_to 'Kit Hire', '/kit-hire', title: 'Hire Safaris and mountain Trekking kits' %></h2>
 			<p>Bless Africa Tours and Safaris have an extensive supply of clothing and equipment available to hire for guests taking part in a Trekking holiday.</p>
 		</div>
 		<div class="span6">
-			<h2><%= link_to 'Mountain Trekking', '/treks', title: 'Mountain Trekking Tours' %></h2>
+			<h2><%= link_to 'Mountain Trekking', :treks, title: 'Mountain Trekking Tours' %></h2>
 			<p>With over 6 years experience of supporting and leading  Treks on both Mt Meru and Mt Kilimanjaro,  the team at Bless Africa Tours and safaris are able to offer further advice on selecting the right Trek for our guests.</p>
 		</div>
 	</div>
@@ -123,11 +123,11 @@
 	<div class="row">
 
 		<div class="span6">
-			<h2><%= link_to 'Safaris and Beach Holidays', '/safaris', title: 'Safaris and Beach Holidays' %></h2>
+			<h2><%= link_to 'Safaris and Beach Holidays', :safaris, title: 'Safaris and Beach Holidays' %></h2>
 			<p>Tanzania is blessed with some of the most amazing animal life in the world. Explore the beautiful National Parks, and then round off the trip of a lifetime with a visit to some of the most stunning beaches in Africa.</p>
 		</div>
 		<div class="span6">
-			<h2><%= link_to 'Day Trips', '/day_trips', title: 'Day Trips' %></h2>
+			<h2><%= link_to 'Day Trips', :day_trips, title: 'Day Trips' %></h2>
 			<p>Set within the foothills of Mount Kilimanjaro, and close to the National parks of Tanzania, Moshi is well placed to explore everything Tanzania has to offer from a Day Hike on Mount Kilimanjaro to the splendour of Arusha National Park.</p>
 		</div>
 	</div>
