--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -2,8 +2,8 @@
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 
 <ul class="thumbnails">
-	<% @albums.each do |album| %>
-		<% if !album.photos == nil?; album.photos.find(:last) do |p| %>
+		<% @albums.each do |album| %>
+			<% p = album.photos.try(:last) %>
   		<li class="span3">
 				<div class="thumbnail" >
 					<%= link_to image_tag(p.name_url(:thumb), alt: p.caption, width: '100%'), album_photos_path(album) %>
@@ -11,9 +11,7 @@
 					<h5><%= link_to album.title, album_photos_path(album) %></h5>
 				</div>
 			</li>
-		<% end %>
-	<% end %>
-	<% end %>
+			<% end %>
 </ul>
 <hr>
 
