--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,11 @@
 		  <div class="carousel-inner">
 			<% if @album.photos %>
 			  <% @album.photos.each do |photo| %>
+				<%= photo.name %> <br>
+				<%= photo.name.url %>
 				<% 5.times do %>
 			    <div class="item">
-			    	<%= image_tag photo.name? ? photo.name.url : 'http://placehold.it/800x400', width: "100%" %>
+			    	<%= image_tag photo.name? ? photo.name : 'http://placehold.it/800x400', width: "100%" %>
 					<div class="carousel-caption">
 						<%= markdown photo.caption %>
 					</div>
